--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             <h1 class="title-font text-6xl text-pink-500" style="color: #ff6384;">Bunia Show</h1>
             <p class="text-xl text-gray-500 mt-2 mb-6">Uczymy się literek!</p>
             <div id="bunia">
-                <!-- Bunia z obrazka -->
-                <img src="bunia.png" alt="Bunia" class="w-40 mx-auto rounded-xl shadow-lg">
+                <!-- Wczytanie obrazka Bunia -->
+                <img src="2aca0aac-0973-4323-88ff-b4f8925249c6.png" alt="Bunia" class="w-40 mx-auto rounded-xl shadow-lg">
             </div>
             <p class="text-xl text-pink-600 font-bold mt-8">Cześć! Nauczymy się razem literek!</p>
             <button id="start-btn" class="btn-start title-font mt-8">Start</button>
